# TiPortfolio

./: .aiignore  .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTION.md  LICENSE  Makefile  PLANS.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  skills-lock.json  test_bug.py
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude/memory/: MEMORY.md  decisions.md  patterns.md
.claude/skills/: ask-matt  codebase-design  diagnosing-bugs  domain-modeling  grill-with-docs  implement  improve  improve-codebase-architecture  prototype  resolving-merge-conflicts  setup-matt-pocock-skills  tdd
.github/workflows/: ci.yml  docs.yml  publish.yml
.ocx/: receipt.jsonc
.opencode/: package.json
.windsurf/rules/: coding-general.md  python-rules.md  tdd.md
about/: index.html
api/: index.html
api/reference/: index.html
api/structure/: index.html
cli/: index.html
debug/: index.html
demo/notebooks/: 1 rebalance experiment.ipynb
docs/: 1 about.md  2 stacks and requirements.md  2026-03-18-allocation-engine-design-review.md  about.md  cli.md  debug.md  dimension 1 trigger of rebalance.md  dimension 2 allocation strategies.md  index.md  papers.md  thoughts.md
docs/api/: index.md  reference.md  signature-and-concerns.md  structure.md
docs/dimensions/: dimension 1 trigger of rebalance.md  dimension 2 allocation strategies.md  dimension 4 ui.md  dimension 5 ai skills.md
docs/guides/: allocation-strategies.md  comparing-results.md  extra-data.md  fix-time-rebalance.md  key-data-types.md  market-volatility-rebalance.md  matket-volatility-rebalance.md  usage.md
docs/ideas/: features.md  index.md
docs/rebalance_ideas/: scheduled_rebalance.md  volatility target rebalance.md
docs/work-plan/: chunk-1-foundation.md  chunk-2-algos-branching.md  chunk-3-trees-shorts.md  chunk-4-advanced-weighting.md  chunk-5-results-charting.md  index.md
examples/: 01_quick_start.py  02_custom_config.py  03_two_asset_bond_equity.py  04_single_asset.py  05_debug_with_printinfo.py  06_buy_and_hold.py  07_qqq_long_hold.py  08_beta_neutral.py  09_erc_risk_parity.py  10_quarterly_ratio.py  11_momentum_top_n.py  12_branching_skip_december.py  13_volatility_targeting.py  14_dollar_neutral.py  15_vix_regime_switching.py  16_weekly_rebalance.py  17_full_results.py  18_multi_backtest_comparison.py  19_sma_crossover.py  20_fetch_and_hold.py  21_leverage_comparison.py  22_auto_investment_plan.py  README.md  _env.py
examples/notebooks/: 01_start_of_month_rebalance.ipynb  02_volatility_targeting_qqq_bil_gld.ipynb  03_vix_target_rebalance.ipynb  04_dollar_neutral_txn_kvue.ipynb  05_beta_neutral_dynamic.ipynb  06_end_of_month_auto_invest_qqq_bil_gld.ipynb  README.md
guides/allocation-strategies/: index.html
guides/comparing-results/: index.html
guides/extra-data/: index.html
guides/fix-time-rebalance/: index.html
guides/key-data-types/: index.html
guides/market-volatility-rebalance/: index.html
guides/usage/: index.html
ideas/: index.html
ideas/features/: index.html
notebooks/: 01_unbiased_dynamic_momentum.ipynb  02_unbiased_dynamic_volatility.ipynb  beta_neutral_dynamic.ipynb  cointegration_pairs.ipynb  cointegration_pairs_goog.ipynb  cointegration_pairs_goog.md  cointegration_pairs_ko_pep.ipynb  cointegration_pairs_t_vz.ipynb  data_preparation.ipynb  dollar_neutral_dynamic_v_ma.ipynb  dollar_neutral_ko_pep.ipynb  dollar_neutral_pairs_selection.ipynb  dollar_neutral_txn_kvue.ipynb  dollar_neutral_v_ma.ipynb  start_of_month_rebalance.ipynb  vix_target_rebalance.ipynb  volatility_targeting_qqq_bil_gld.ipynb
openspec/: config.yaml
papers/: index.html
research/: friday_spy_vs_next_etf_pairs.csv  jp_friday_spy_vs_us_etf_pairs.csv  us_friday_vs_jp_monday.ipynb  volatility_targeting_allocation.ipynb
scripts/: release.py
search/: search_index.json
src/tiportfolio/: CLAUDE.md  __init__.py  algo.py  allocation.py  backtest.py  calendar.py  cli.py  config.py  data.py  engine.py  main.py  market_calendar.py  metrics.py  portfolio.py  report.py  result.py
tests/: conftest.py  test_aip.py  test_algo.py  test_allocation_and_volatility_engine.py  test_allocation_beta_neutral.py  test_allocation_dollar_neutral.py  test_allocation_vol_targeting.py  test_backtest.py  test_backtest_charts.py  test_backtester.py  test_beta_screener.py  test_calendar.py  test_carry_costs.py  test_cli.py  test_cli_aip.py  test_combinators.py  test_config.py  test_data.py  test_data_source_parity.py  test_data_validation.py  test_e2e.py  test_engine.py  test_engine_with_data_fetcher.py  test_fixed_allocation.py  test_integration.py  test_leverage.py  test_long_hold.py  test_market_calendar.py  test_metrics.py  test_plot_interactive.py  test_portfolio.py  test_rebalance.py  test_report.py  test_result.py  test_result_full.py  test_select.py  test_signal.py  test_signal_delay.py  test_signal_indicator.py  test_simple_rebalance_qqq_bil_gld_rebalance.py  (+4 more)
tests/allocations/: test_fix_percentage.py  test_fix_ratio.py  test_fix_ratio_one_asset.py  test_fix_ratio_two_assets.py  test_fixed_allocation.py  test_vix_targeting.py
tests/data/: aapl.csv  aapl_2018_2024_alpaca.csv  aapl_2018_2024_yf.csv  bil_2018_2024.csv  (+22 more)
thoughts/: index.html
work-plan/: index.html
(+430 files in other folders)
