[project]
name = "tiportfolio"
version = "0.1.0"
description = "A portfolio management tool with built-in state-of-the-art portfolio optimization algorithms, with extensibility for different use cases for both institutes and retail traders."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alpaca-py>=0.43.2",
    "diskcache>=5.6.3",
    "joblib>=1.5.2",
    "notebook>=7.4.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "progressbar>=2.5",
    "yfinance>=0.2.66",
]

[project.scripts]
tiportfolio = "tiportfolio.main:main"


dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
