[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiportfolio"
version = "1.2.0"
description = "A portfolio management tool with built-in state-of-the-art portfolio optimization algorithms, with extensibility for different use cases for both institutes and retail traders."
readme = "README.md"
authors = [{ name = "tim-hub" },{ name = "TradeInsight.info" }]
requires-python = ">=3.10, <=3.14"
license = { text = "Apache-2.0" }
keywords = [
    'Algorithm Trading',
    'Backtesting',
    'Portfolio Optimization',
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = { homepage = "https://github.com/TradeInsight-Info/TiPortfolio" }
dependencies = [
    "alpaca-py>=0.43.2",
    "diskcache>=5.6.3",
    "joblib>=1.5.2",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-market-calendars>=5.1.3",
    "progressbar>=2.5",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
    "click>=8.0",
]

[project.optional-dependencies]
interactive = ["plotly>=5.0.0", "kaleido"]
erc = ["riskfolio-lib>=7.0.1"]

[dependency-groups]
dev = [
    "mkdocs==1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.3",
    "notebook>=7.5.0",
    "plotly>=5.0.0",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.1",
    "pandas-stubs==2.3.2.250926",
    "riskfolio-lib>=7.0.1",
]

[project.scripts]
tiportfolio = "tiportfolio.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/tiportfolio"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that hit external services (skipped by default, use -m integration to run)",
]

[tool.mypy]
# Python version target
python_version = "3.12"
ignore_missing_imports = true
# Equivalent to setting PYTHONPATH=src
mypy_path = "src"

# Paths to ignore (mypy uses 'exclude' as a regex string, not a list)
exclude = '''
(
    \.bzr|
    \.direnv|
    \.eggs|
    \.git|
    \.git-rewrite|
    \.hg|
    \.ipynb_checkpoints|
    \.mypy_cache|
    \.nox|
    \.pants\.d|
    \.pyenv|
    \.pytest_cache|
    \.pytype|
    \.ruff_cache|
    \.svn|
    \.tox|
    \.venv|
    \.vscode|
    __pypackages__|
    _build|
    buck-out|
    build|
    dist|
    node_modules|
    site-packages|
    venv
)
'''
